objects/NSF__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <label>Billing Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_ZIP__c</fullName>
        <label>Billing ZIP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Legal_Name__c</fullName>
        <label>Client Legal Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <label>Client Name</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Status__c</fullName>
        <inlineHelpText>Status of Overall Account (Active/Termed)</inlineHelpText>
        <label>Client Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NSFs</relationshipLabel>
        <relationshipName>NSFs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collection_Complete__c</fullName>
        <inlineHelpText>Date the total amount was collected</inlineHelpText>
        <label>Collection Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Collections_Balance__c</fullName>
        <inlineHelpText>Amount sent to collections</inlineHelpText>
        <label>Collections Balance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Collections_Date__c</fullName>
        <inlineHelpText>Date the file was sent to collections</inlineHelpText>
        <label>Collections Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Collections_Notes__c</fullName>
        <label>Collections Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <inlineHelpText>Direct Line to Contact</inlineHelpText>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <inlineHelpText>Contact 1 from main client page</inlineHelpText>
        <label>Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Check_Comments__c</fullName>
        <label>Credit Check Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Check_Date__c</fullName>
        <inlineHelpText>Date the credit score was checked</inlineHelpText>
        <label>Credit Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if credit was checked</inlineHelpText>
        <label>Credit Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Score__c</fullName>
        <label>Credit Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Total_Due__c</fullName>
        <formula>NSF_Amount__c  -  Total_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>NSF Amount less Total Paid</inlineHelpText>
        <label>Current Total Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Default_Notice_Sent__c</fullName>
        <inlineHelpText>Date the default notice was sent to client.</inlineHelpText>
        <label>Default Notice Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_Amount__c</fullName>
        <inlineHelpText>Deposit amount currently on file.</inlineHelpText>
        <label>Deposit Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Billed__c</fullName>
        <inlineHelpText>Amount of deposit to be billed to the client.</inlineHelpText>
        <label>Deposit Billed</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <inlineHelpText>Date we expect NSF to be cleared/paid in full</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finance_Chg_Date__c</fullName>
        <formula>NSF_PayPeriod__c +5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance Chg Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_up_Date__c</fullName>
        <label>Follow-up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NSF_Amount__c</fullName>
        <inlineHelpText>Total $$ Amount of the NSF</inlineHelpText>
        <label>NSF Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NSF_PayPeriod__c</fullName>
        <inlineHelpText>Payroll period that NSF'd</inlineHelpText>
        <label>NSF PayPeriod</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notice_Date__c</fullName>
        <inlineHelpText>Date the NSF notice was rec'd from the bank.</inlineHelpText>
        <label>Notice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Occurrence__c</fullName>
        <label>Occurrence w/in 12 months</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st Occurrence</fullName>
                </value>
                <value>
                    <fullName>2nd Occurrence</fullName>
                </value>
                <value>
                    <fullName>3rd Occurrence</fullName>
                </value>
                <value>
                    <fullName>Additional Occurrence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paid_in_Full__c</fullName>
        <inlineHelpText>Expected date payment plan is to be paid in full.</inlineHelpText>
        <label>Paid in Full</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Past_Due_Days__c</fullName>
        <inlineHelpText># of Days Past Due</inlineHelpText>
        <label>Past Due Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Cycle__c</fullName>
        <inlineHelpText>How often payment is required.</inlineHelpText>
        <label>Payment Cycle</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Plan_Amount__c</fullName>
        <inlineHelpText>Expected Payment per month/payperiod required</inlineHelpText>
        <label>Payment Plan Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payroll_Cycle__c</fullName>
        <label>Payroll Cycle</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payroll_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if payroll hold has been placed.</inlineHelpText>
        <label>Payroll Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payroll_released__c</fullName>
        <inlineHelpText>Checked to indicate that payroll is ok to release.</inlineHelpText>
        <label>Ok to Release Payroll</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACH Reprocessed</fullName>
                </value>
                <value>
                    <fullName>Cashier's Check Rec'd</fullName>
                </value>
                <value>
                    <fullName>Payment Promised</fullName>
                </value>
                <value>
                    <fullName>Payment Plan</fullName>
                </value>
                <value>
                    <fullName>COD</fullName>
                </value>
                <value>
                    <fullName>Client Call - A/R</fullName>
                </value>
                <value>
                    <fullName>Client Call - AM</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Client Termed</fullName>
                </value>
                <value>
                    <fullName>Internal Inquiries in Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lokahi</fullName>
                </value>
                <value>
                    <fullName>Pono</fullName>
                </value>
                <value>
                    <fullName>Kokua</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Paid__c</fullName>
        <inlineHelpText>Total amount paid towards NSF</inlineHelpText>
        <label>Total Paid</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1st_Installment_Invoice__c</fullName>
        <inlineHelpText>Date of 1st invoice to receive billed deposit</inlineHelpText>
        <label>1st Installment Invoice</label>
        <type>Date</type>
    </fields>
    <description>Account NSF History</description>
    <label>NSF</label>
    <nameField>
        <label>NSF Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NSFs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client_ID__c</columns>
        <columns>Client__c</columns>
        <columns>Client_Status__c</columns>
        <columns>Notice_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>NSF_Amount__c</columns>
        <columns>Occurrence__c</columns>
        <columns>Status__c</columns>
        <columns>Payroll_Hold__c</columns>
        <columns>Credit_Check__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Closed</fullName>
        <columns>NAME</columns>
        <columns>Client_ID__c</columns>
        <columns>Client_Name__c</columns>
        <columns>Client_Status__c</columns>
        <columns>NSF_Amount__c</columns>
        <columns>Occurrence__c</columns>
        <columns>Phone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Client Termed,Closed</value>
        </filters>
        <label>All Closed</label>
    </listViews>
    <listViews>
        <fullName>All_Open</fullName>
        <columns>NAME</columns>
        <columns>Client_ID__c</columns>
        <columns>Client_Name__c</columns>
        <columns>Client_Status__c</columns>
        <columns>Team__c</columns>
        <columns>NSF_Amount__c</columns>
        <columns>Total_Paid__c</columns>
        <columns>Current_Total_Due__c</columns>
        <columns>Occurrence__c</columns>
        <columns>Status__c</columns>
        <columns>Follow_up_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Client Termed</value>
        </filters>
        <label>All Open</label>
    </listViews>
    <listViews>
        <fullName>Today_s_NSF_s</fullName>
        <columns>NAME</columns>
        <columns>Client_ID__c</columns>
        <columns>Client_Name__c</columns>
        <columns>Client_Status__c</columns>
        <columns>NSF_Amount__c</columns>
        <columns>Occurrence__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today's NSF's</label>
    </listViews>
</CustomObject>